# minion-commsv2

./: .gitignore  AGENTS.md  CLAUDE.md  FRAMEWORK.md  pyproject.toml
crews/: ff1.yaml
docs/: protocol-common.md  protocol-lead.md
scripts/: install.sh  poll.sh
src/minion_comms/: __init__.py  auth.py  cli.py  comms.py  crew.py  db.py  defaults.py  filesafety.py  flow_bridge.py  fs.py  lifecycle.py  monitoring.py  polling.py  tasks.py  triggers.py  warroom.py
src/minion_comms/crew/: __init__.py  _tmux.py  daemon.py  hand_off.py  spawn.py  stand_down.py  terminal.py
tests/: conftest.py  test_comms.py  test_crew.py  test_filesafety.py  test_flow_bridge.py  test_lifecycle.py  test_monitoring.py  test_polling.py  test_pull_complete.py  test_tasks.py  test_warroom.py
