[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minion-comms"
version = "2.0.0"
description = "Multi-agent coordination — CLI-first, stateless, filesystem + SQLite"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dag = ["minion-tasks>=0.1.0"]

[tool.uv.sources]
minion-tasks = { path = "../minion-tasks", editable = true }

[project.scripts]
minion = "minion_comms.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minion_comms"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
